--- a/values.yaml
+++ b/values.yaml
@@ -3,13 +3,4 @@ title: loft0
 body: from helm
 color: orange
 
-ingress:
-   tld: realworks.fun
-
-# global:
-#   fleet:
-#     clusterLabels:
-#         color: cyan
-#         env: dev
-#         fleet.cattle.io/cluster: cluster-ea7913f6fbc6
-#         management.cattle.io/cluster-display-name: szerda
+tld: k8z.eu
